[gd_scene load_steps=9 format=3 uid="uid://bpnl1ew662d75"]

[ext_resource type="Script" path="res://scripts/encounter/soul.gd" id="1_h54nv"]
[ext_resource type="Texture2D" uid="uid://duwqctjh12lyi" path="res://textures/encounter/soul.png" id="2_j6ddw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y53q"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_f0044"]
radius = 3.5

[sub_resource type="Animation" id="Animation_ea7sw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bccns"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hur5x"]
resource_name = "hurt"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0.215686), Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0.215686), Color(1, 1, 1, 0.607843)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4ifp"]
_data = {
"RESET": SubResource("Animation_ea7sw"),
"default": SubResource("Animation_bccns"),
"hurt": SubResource("Animation_hur5x")
}

[node name="Soul" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_h54nv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j6ddw")
offset = Vector2(0, -1)
hframes = 3

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8y53q")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="Collision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_f0044")
debug_color = Color(0.254902, 0.815686, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n4ifp")
}

[node name="FloorDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 7)

[node name="SoulShotEffect" type="Node" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
